--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -3,8 +3,6 @@
   <div class="sidebar sticky">
   {% if page.author_profile or layout.author_profile %}{% include author-profile.html %}{% endif %}
 
-  {% include sidebar_units %}
-  
   {% if page.sidebar %}
     {% for s in page.sidebar %}
       {% if s.image %}
@@ -20,10 +18,15 @@
       {% if s.text %}{{ s.text | markdownify }}{% endif %}
     {% endfor %}
     {% if page.sidebar.nav %}
-      {% include nav_list nav=page.sidebar.nav %}
+	  {% if page.sidebar.nav == "units" %}
+        {% include sidebar_units %}
+	  {% elsif page.sidebar.nav == "docs" %}
+        {% include nav_list nav=page.sidebar.nav %}
+	  {% endif %}
     {% endif %}
   {% endif %}
   </div>
+  
 {% endif %}
 
 
